[gd_scene load_steps=17 format=2]

[ext_resource path="res://UI/GameUI.gd" type="Script" id=1]
[ext_resource path="res://UI/AsteroidHighlights/OffScreenContainer.gd" type="Script" id=2]
[ext_resource path="res://UI/BoostNinePatch.png" type="Texture" id=3]
[ext_resource path="res://UI/BoostBarControl.gd" type="Script" id=4]
[ext_resource path="res://UI/SpaceStationHP.png" type="Texture" id=5]
[ext_resource path="res://UI/StationHealth.gd" type="Script" id=6]
[ext_resource path="res://GameTheme.tres" type="Theme" id=7]
[ext_resource path="res://Fonts/GemunuLibre-VariableFont_wght.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://UI/Arrow.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=7]
size = 32
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 1024, 0, 256, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="LevelLabel" type="Label" parent="."]
margin_left = 1289.0
margin_top = 37.0
margin_right = 1372.0
margin_bottom = 73.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 7 )
text = "Level: 1"

[node name="OffScreenContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -608.0
margin_top = -338.0
margin_right = 615.0
margin_bottom = 338.0
script = ExtResource( 2 )

[node name="Arrow" parent="OffScreenContainer" instance=ExtResource( 9 )]
visible = false
position = Vector2( 628, 771 )

[node name="BoostBarControl" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -291.0
margin_right = -67.0
margin_bottom = 292.0
script = ExtResource( 4 )

[node name="BoostBarFrame" type="NinePatchRect" parent="BoostBarControl"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )
patch_margin_left = 7
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="BoostBar" type="ColorRect" parent="BoostBarControl"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.5
margin_top = 5.0
margin_right = 15.5
margin_bottom = -5.0

[node name="BoostLabel" type="Label" parent="BoostBarControl"]
margin_top = 588.0
margin_right = 40.0
margin_bottom = 602.0
theme = ExtResource( 7 )
text = "Boost"
align = 1

[node name="StationHealth" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -103.0
margin_right = 210.0
margin_bottom = -63.0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="StationHealth"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = -20.0
margin_right = 76.0
theme = ExtResource( 7 )
text = "Space station integrity"
align = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="StationHealth"]
position = Vector2( 209, 20 )
frames = SubResource( 6 )
frame = 4

[node name="HitTimer" type="Timer" parent="StationHealth"]
wait_time = 0.51
one_shot = true

[node name="ShakeTimer" type="Timer" parent="StationHealth"]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="StationHealth/HitTimer" to="StationHealth" method="_on_HitTimer_timeout"]
[connection signal="timeout" from="StationHealth/ShakeTimer" to="StationHealth" method="_on_ShakeTimer_timeout"]
